kube-config/purple_lessons/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: web
  template:
    metadata:
      labels:
        components: web
    spec:
      containers:
      - name: short-app
        image: antonlarichev/short-app:v1.4
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
        ports:
          - containerPort: 80
