kube-config/purple_lessons/rmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmq
  template:
    metadata:
      labels:
        app: rmq
    spec:
      containers:
      - name: rmq
        image: rabbitmq:3-management
        resources:
          limits:
            memory: "250Mi"
            cpu: "150m"
        volumeMounts:
          - name: rmq-data
            mountPath: /var/lib/rabbitmq/
            
        ports:
        - containerPort: 5672  
        - containerPort: 15672 
        - containerPort: 25672 
      volumes:
        - name: rmq-data
          persistentVolumeClaim:
            claimName: rmq-pvc
