kube-config/purple_lessons/pgadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-clusterip
  labels:
    app: pgadmin
spec:
  type: ClusterIP
  ports:
    - name: admin
      protocol: TCP
      port: 80
      targetPort: 30200
  selector:
    app: pgadmin
