kube-config/purple_lessons/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
