kube-config/purple_lessons/rmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rmq-clusterip
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: clustering
      protocol: TCP
      port: 25672
      targetPort: 25672
  selector:
    app: rmq
